# zk-gate

./: .gitignore  ARCHITECTURE.md  LICENSE  README.md
circuits/: Nargo.toml  Prover.toml
circuits/src/: lib.nr  main.nr
contracts/zk-kyc-verifier/: Cargo.toml
contracts/zk-kyc-verifier/src/: lib.rs
demo/: VIDEO_SCRIPT.md  index.html
scripts/: full_demo.sh  install.sh  setup.sh
